--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
+
 body {
   border: 1px solid black;
   height: 100vh;
@@ -16,13 +18,26 @@ h1 {
   color: #1d1b2a;
   text-align: center;
   margin: 0.5rem auto 0 auto;
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: balck 900;
 }
-.add-new-task-section {
+
+.card-text h1 {
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 500;
+}
+
+p {
+  font-family: "Noto Sans JP", sans-serif;
+  font-weight: 100;
+  font-size: 0.7rem;
+}
+.new-task-details {
   width: 99%;
   height: 100px;
   border: 1px solid black;
   display: flex;
-  align-items: center;
+  justify-content: space-around;
   margin: auto;
 }
 
@@ -32,7 +47,13 @@ h1 {
   border: 1px solid black;
 }
 
-.add-task.button {
+.new-task-description {
+  height: 2rem;
+  width: 10rem;
+}
+
+.new-task-name-container {
+  margin-bottom: 1rem;
 }
 
 .verde {
@@ -85,6 +106,11 @@ h1 {
 }
 
 button:hover {
+  background-color: #53515d;
+  color: #f3f1ea;
+}
+
+button:active {
   background-color: #53515d;
   color: #f3f1ea;
 }
