--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,7 +38,7 @@ p {
   border: 1px solid black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: auto;
 }
 
@@ -49,6 +49,11 @@ p {
 
 .new-task-name-container {
   margin-bottom: 1rem;
+  display: flex;
+}
+.new-task-description-container {
+  margin-bottom: 1rem;
+  display: flex;
 }
 
 .verde {
